--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
     --hero-fon: #2F303A;
     --logo-color: #000000;
     --contact-color: rgba(255, 255, 255, 0.6);
+    --buttun-color-active: #188CE8;
+    --portfolio-border: #EEEEEE;
 }
 
 /* --ЗАГАЛЬНІ ЗМІННІ-- */
@@ -16,7 +18,6 @@ body {
     background: var(--hero-color);
     color: var(--title-text-color);
     margin: 0;
-
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 14px;
@@ -36,12 +37,48 @@ body {
     text-decoration: none;
 }
 
+/* Скриття елемента */
+.hidden {
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+}
+
+
+/* центрування і обмеження контенту */
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    
+    outline: 2px solid var(--logo-color); /* удали меня */
+}
+
+/* обнулення відступів */
+h1, h2, h3, h4, p {
+    margin: 0;
+    padding: 0;
+}
+
+.center {
+    display: flex;
+    margin-right: auto;
+    margin-left: auto;
+    align-items: center;
+    flex-direction: column;
+}
+
 /* --ШАПКА САЙТУ-- */
 
 /* Логотип */
 
 .logo {
     color: var(--accent-color);
+    margin-right: 93px;
 
     font-family: 'Raleway';
     font-weight: 700;
@@ -56,13 +93,34 @@ body {
 
 /* Навігація сайту */
 
+.header-nav {
+    display: flex;
+    align-items: center;
+}
+
+.site-nav {
+    display: flex;    
+}
+
+.site-nav li {
+margin-right: 50px;
+}
+
 .site-link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;    
     color: var(--primary-text-color);
+    
 
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+}
+
+.site-nav li:last-child {
+    margin-right: 0px;
 }
 
 .site-nav .link:hover, 
@@ -74,13 +132,26 @@ body {
     color: var(--accent-color);
 }
 
+.adress-nav {
+    display: flex;
+    margin-left: auto;
+}
+
+.adress-nav li {
+    margin-left: 50px;
+}
+
 .adress-link {
-    color: var(--title-text-color);
+    color: var(--title-text-color);    
 
     font-weight: 500;
     font-size: 14px;
     line-height: 1.17;
     letter-spacing: 0.02em;
+}
+
+.adress-nav li:first-child {
+    margin-left: 0px;
 }
 
 .adress-nav .link:hover,
@@ -93,19 +164,23 @@ body {
 /* Заголовок сайту */
 
 .hero {
-    background: var(--hero-fon); 
+    background: var(--hero-fon);
     text-align: center;
+    height: 400px;
+    padding-top: 200px;
 }
 
 .hero-title {
     color: var(--hero-color);
-
+    width: 696px;
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
+    margin-left: auto;
+    margin-right: auto;   
 }
 
 .button {
@@ -119,8 +194,19 @@ body {
     line-height: 1.88;
     text-align: center;
     letter-spacing: 0.06em;
+
+    padding: 10px 30px;
+
+    margin-top: 30px;
+    border: 0px;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    outline: 0px solid var(--accent-color);
 }
 
+.button:hover, .button:focus {
+    background: var(--buttun-color-active);
+}
 /* Секції */
 
 .section-title {
@@ -135,6 +221,25 @@ body {
 
 /* Особливості */
 
+.feature-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.feature-list {
+    display: flex;    
+}
+
+.feature-list ul {
+    display: block;
+    align-items: center;
+}
+
+.feature-list li {
+    width: 270px;
+    margin-right: 50;
+}
+
 .feature-title {
     color: var(--primary-text-color);
 
@@ -145,7 +250,33 @@ body {
     text-transform: uppercase;
 }
 
+/* чим ми займаємося*/
+
+.work-list {
+    display: flex;
+    margin-top: 50px;
+    justify-content: center;
+}
+
+.work-list li {
+    margin-right: 30px;
+}
+
+.work-list li:last-child {
+    margin-right: 0px;
+}
+
 /* Команда */
+
+.comand-section {
+    background: var(--portfolio-button);
+}
+
+.user-list {
+    display: flex;
+    margin-top: 50px;
+    justify-content: center;
+}
 
 .user-title {
     color:var(--primary-text-color);
@@ -161,22 +292,24 @@ body {
     text-align: center;
 }
 
-/* -- ТІЛО ПОРТФОЛіО-- */
-
-.projects-title {
-    color: var(--primary-text-color);
-
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+.user-list li {
+    width: 270px;
+    margin-right: 30px;
+}
+.user-list li:last-child {
+    margin-right: 0px;
 }
 
-.projects-desc {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.03em;
+/* -- ТІЛО ПОРТФОЛіО-- */
+
+.filters {
+    display: flex;
+    justify-content: center;
+}
+
+.filters-section {
+    padding-top: 50px;
+    padding-bottom: 94px;
 }
 
 .filters-button {
@@ -190,18 +323,80 @@ body {
     line-height: 1.62;
     text-align: center;
     letter-spacing: 0.03em;
+
+    margin-right: 8px;
+    border-radius: 4px;
+    border: 0px;
+    padding: 6px 25px;
 }
 
 .filters-button:hover,
 .filters-button:focus {
-    color: var(--hero-color);    
+    color: var(--hero-color);
     background: var(--accent-color);
+}
+
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 50px;
+}
+
+.projects li {
+    margin-bottom: 30px;
+    margin-right: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.projects-border {
+    border-right:1px solid var(--portfolio-border);
+    border-bottom:1px solid var(--portfolio-border);
+    border-left: 1px solid var(--portfolio-border);
+    /* border: 1px solid var(--portfolio-border); */
+}
+
+.projects li:nth-child(3n+3) {
+    margin-right: 0px;
+}
+
+.projects li:nth-last-child(-n+3) {
+    margin-bottom: 3px;
+}  
+
+.projects-title {
+    color: var(--primary-text-color);
+
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+
+    margin-top: 20px;
+    margin-left: 24px;
+}
+
+.projects-desc {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+
+    margin-top: 4px;
+    margin-left: 24px;
+    margin-bottom: 20px;
 }
 
 /* --ФУТЕР-- */
 
 .footer {
+    padding-top: 52px;
+    padding-bottom: 50px;
     background: var(--hero-fon);
+}
+
+.address {
+    margin-top: 20px;
 }
 
 .logo-white {
@@ -223,4 +418,12 @@ body {
 .address .link:hover,
 .address .link:focus {
     color: var(--accent-color);
+}
+
+.address-list li {
+    margin-bottom: 9px;
+}
+
+.address-list li:last-child {
+    margin-bottom: 0px;
 }
