--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
     --contact-color: rgba(255, 255, 255, 0.6);
     --buttun-color-active: #188CE8;
     --portfolio-border: #EEEEEE;
+    --heder-border: #ECECEC;
 }
 
 /* --ЗАГАЛЬНІ ЗМІННІ-- */
@@ -55,7 +56,7 @@ body {
     padding-left: 15px;
     padding-right: 15px;
     
-    outline: 2px solid var(--logo-color); /* удали меня */
+    /* outline: 2px solid var(--logo-color); удали меня */
 }
 
 /* обнулення відступів */
@@ -96,6 +97,7 @@ h1, h2, h3, h4, p {
 .header-nav {
     display: flex;
     align-items: center;
+    border-bottom: 1px solid var(--heder-border);
 }
 
 .site-nav {
